--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
     background: url('../img/26647696822_8791ff4a59_o.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -20,7 +20,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: "Playfair Display","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Playfair Display","Helvetica Neue",Helvetica,Arial,serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -119,7 +119,7 @@ footer p {
         padding: 30px 0 10px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-family: "Playfair Display",Helvetica,Arial,sans-serif;
         font-size: 5em;
         font-weight: 700;
         line-height: normal;
@@ -167,7 +167,10 @@ footer p {
     }
 
     .nav>li>a {
-        padding: 35px;
+        padding-top: 35px;
+        padding-bottom: 35px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .navbar-nav>li>a {
