--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -84,6 +84,10 @@ hr {
     background: rgba(255,255,255,0.9);
 }
 
+.td {
+    text-decoration: underline;
+}
+
 .intro-text {
     text-transform: uppercase;
     font-size: 1.25em;
