--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/26647696822_8791ff4a59_o.jpg') no-repeat center center fixed;
+    background: url('../img/Artboard 1.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
