--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/21334708589_18a69b35da_o.png') no-repeat center center fixed;
+    background: url('../img/2150790451_b21b4cb86a_o.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
