--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/slide6.JPG') no-repeat center center fixed;
+    background: url('../img/Artboard 1pink.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
